--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,9 +1,14 @@
 <!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        Hello, world!
-    </body>
+<html lang="ko" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>서고관리시스템</title>
+</head>
+
+<body>
+	Hello, <p th:text="${userId}"></p>
+</body>
+
 </html>
