--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -21,7 +21,7 @@ body {
 	height: 430px;
 }
 .form-box:before {
-	background-image: url("../img/main_img.gif");
+	background-image: url("../img/login_img.gif");
 	width: 100%;
 	height: 100%;
 	background-size: cover;
