드롭다운 css 부분 수정

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,49 +1,3 @@
-
-.dropdown{
-  position : relative;
-  display : inline-block;
-}
-
-.dropbtn_icon{
-  font-family : 'Material Icons';
-}
-.dropbtn{
-  border : 1px solid rgb(37, 37, 37);
-  border-radius : 4px;
-  background-color: #f5f5f5;
-  font-weight: 400;
-  color : rgb(37, 37, 37);
-  padding : 12px;
-  width :200px;
-  text-align: left;
-  cursor : pointer;
-  font-size : 12px;
-}
-.dropdown-content{
-  display : none;
-  position : absolute;
-  z-index : 1; /*다른 요소들보다 앞에 배치*/
-  font-weight: 400;
-  background-color: #f9f9f9;
-  min-width : 200px;
-}
-
-.dropdown-content a{
-  display : block;
-  text-decoration : none;
-  color : black;
-  font-size: 12px;
-  padding : 12px 20px;
-}
-
-.dropdown-content a:hover{
-  background-color : #ececec
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
 .head1 {
 	font-size: 40px;
 	color: #009900;
@@ -71,7 +25,7 @@ body {
 	color: white;
 	margin: 0 auto;
 	overflow: hidden;
-	height: 500px;
+	height: 150px;
 }
 
 .menu a {
@@ -86,6 +40,72 @@ body {
 .menu-log {
 	right: auto;
 	float: right;
+}
+
+nav div {
+  padding: 0.6em;
+  background: #e3e3e3;
+  display: none;
+  cursor: pointer;
+  color: #292929;
+  font-size: 24px;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+  background: #e3e3e3;
+  list-style-type: none;
+  position: relative;
+}
+
+ul li {
+  display: inline-block;
+}
+
+ul li a {
+  padding: 15px;
+  color: #292929;
+  text-decoration: none;
+  display: block;
+}
+
+ul li:hover {
+  background: lightgreen;
+}
+
+ul ul {
+  position: absolute;
+  min-width: auto;
+  background: lightgrey;
+  display: none;
+}
+
+ul ul li {
+  display: block;
+  background: #e3e3e3;
+}
+
+ul li:hover ul {
+  display: block;
+}
+
+@media (max-width: 768px) {
+  nav div {
+    display: block;
+  }
+  ul {
+    display: none;
+    position: static;
+    background: #e3e3e3;
+  }
+  ul li {
+    display: block;
+  }
+  ul ul {
+    position: static;
+    background: #e3e3e3;
+  }
 }
 
 .body_sec {
