--- a/src/main/resources/templates/fragments/main_header.html
+++ b/src/main/resources/templates/fragments/main_header.html
@@ -32,7 +32,7 @@
 					<li><a href="/main/editProfile">내 정보 수정</a></li>
 				</ul>
 			</li>
-			<li><a href="'/main/setting">설정</a></li>
+			<li><a href="/main/setting">설정</a></li>
 			<li><a href="/login">로그아웃</a></li>
 		</ul>
 	</nav>
