--- a/src/main/resources/static/css/doc/addDoc.css
+++ b/src/main/resources/static/css/doc/addDoc.css
@@ -8,3 +8,61 @@
 	float: right;
 	width: 100px;
 }
+
+.exceldownload_view {
+	float: right;
+	margin-right: 20px;
+}
+
+.table_view {
+	margin: 20px;
+}
+
+table {
+  border-collapse: collapse;
+  border: 0;
+  width: 100%;
+}
+th,
+td {
+  border: 1px solid #aaa;
+  background-clip: padding-box;
+  scroll-snap-align: start;
+}
+tbody tr:last-child th,
+tbody tr:last-child td {
+  border-bottom: 0;
+}
+thead {
+  z-index: 1000;
+  position: relative;
+}
+th,
+td {
+  padding: 0.6rem;
+  min-width: 6rem;
+  text-align: left;
+  margin: 0;
+}
+thead th {
+  position: sticky;
+  top: 0;
+  border-top: 0;
+  background-clip: padding-box;
+}
+tbody th {
+  background-clip: padding-box;
+  border-left: 0;
+}
+tbody {
+  z-index: 10;
+  position: relative;
+}
+tbody th {
+  position: sticky;
+  left: 0;
+}
+thead th,
+tbody th {
+  background-color: #f8f8f8;
+}
