--- a/src/main/resources/templates/doc/addDoc.html
+++ b/src/main/resources/templates/doc/addDoc.html
@@ -33,11 +33,15 @@
 		</form>
 	</div>
 
+	<div class="exceldownload_view">
+		<button class="exceldownload" type="submit" onclick="window.location.href='/main/addDoc/exceldownload.do'">엑셀
+			다운로드</button>
+	</div>
+
 	<div class="table_view">
 		<table>
 			<thead>
 				<tr>
-					<th class="pin"></th>
 					<th>No</th>
 					<th>문서번호</th>
 					<th>문서이름</th>
@@ -52,7 +56,7 @@
 					<td><span th:text="${documents.docNum}"></span></td>
 					<td><span th:text="${documents.docName}"></span></td>
 					<td><span th:text="${documents.regName}"></span></td>
-					<td><span th:text="${documents.regDate}"></span></td>
+					<td><span th:text="${{documents.regDate}}"></span></td>
 				</tr>
 			</tbody>
 		</table>
