--- a/src/main/resources/templates/doc/addDoc.html
+++ b/src/main/resources/templates/doc/addDoc.html
@@ -14,6 +14,8 @@
 
 	<!-- Material Icons CSS -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+	<script src="https://code.jquery.com/jquery-3.6.3.slim.min.js"
+		integrity="sha256-ZwqZIVdD3iXNyGHbSYdsmWP//UBokj2FHAxKuSBKDSo=" crossorigin="anonymous"></script>
 
 </head>
 
@@ -34,12 +36,13 @@
 	</div>
 
 	<div class="exceldownload_view">
-		<button class="exceldownload" type="submit" onclick="window.location.href='/main/addDoc/exceldownload.do'">엑셀
+		<button id="exceldownload" class="exceldownload" type="submit"
+			onclick="window.location.href='/main/addDoc/exceldownload.do'">엑셀
 			다운로드</button>
 	</div>
 
 	<div class="table_view">
-		<table>
+		<table id="tblExport">
 			<thead>
 				<tr>
 					<th>No</th>
@@ -52,7 +55,7 @@
 
 			<tbody>
 				<tr th:each="documents : ${documentList}">
-					<td><span th:text="${documents.id}"></span></td>
+					<td><span id="id" th:text="${documents.id}"></span></td>
 					<td><span th:text="${documents.docNum}"></span></td>
 					<td><span th:text="${documents.docName}"></span></td>
 					<td><span th:text="${documents.regName}"></span></td>
@@ -61,6 +64,8 @@
 			</tbody>
 		</table>
 	</div>
+
+	<script src="/js/doc/addDoc.js"></script>
 
 </body>
 
