엑셀 다운로드 버튼 클릭 시 href 설정하는 것 제거

--- a/src/main/resources/templates/doc/addDoc.html
+++ b/src/main/resources/templates/doc/addDoc.html
@@ -36,8 +36,7 @@
 	</div>
 
 	<div class="exceldownload_view">
-		<button id="exceldownload" class="exceldownload" type="submit"
-			onclick="window.location.href='/main/addDoc/exceldownload.do'">엑셀
+		<button id="exceldownload" class="exceldownload" type="submit">엑셀
 			다운로드</button>
 	</div>
 
